

[COLOR grey][Date: 2013.08.28][/COLOR][COLOR black][Post: 3][/COLOR]
[COLOR cornflowerblue][B]Private Build:[/B][/COLOR]  v0.2.7

[COLOR grey][Date: 2013.08.28][/COLOR][COLOR black][Post: 2][/COLOR]
[COLOR cornflowerblue][B]Release:[/B][/COLOR]  v0.2.6

[COLOR grey][Date: 2013.08.28][/COLOR][COLOR black][Post: 1][/COLOR]
[COLOR red][B]News:[/B][/COLOR]  Updates for Host Menu and Movie Listings.

[COLOR grey][Date: 2013.08.23][/COLOR][COLOR black][Post: 4][/COLOR]
[COLOR cornflowerblue][B]Private Build:[/B][/COLOR]  v0.2.6

[COLOR grey][Date: 2013.08.23][/COLOR][COLOR black][Post: 3][/COLOR]
[COLOR cornflowerblue][B]Release:[/B][/COLOR]  v0.2.5

[COLOR grey][Date: 2013.08.23][/COLOR][COLOR black][Post: 1][/COLOR]
[COLOR red][B]News:[/B][/COLOR]  Fanart Changer for TV Show Favorites.

[COLOR grey][Date: 2013.08.21][/COLOR][COLOR black][Post: 1][/COLOR]
[COLOR red][B]News:[/B][/COLOR]  Improved apon my plugin graphics.
### fanart.jpg and icon.png have been updated.

[COLOR grey][Date: 2013.08.20][/COLOR][COLOR black][Post: 4][/COLOR]
[COLOR cornflowerblue][B]Private Build:[/B][/COLOR]  v0.2.5

[COLOR grey][Date: 2013.08.20][/COLOR][COLOR black][Post: 3][/COLOR]
[COLOR cornflowerblue][B]Release:[/B][/COLOR]  v0.2.4

[COLOR grey][Date: 2013.08.20][/COLOR][COLOR black][Post: 2][/COLOR]
[COLOR red][B]News:[/B][/COLOR]  Don't forget the XBMCHUB Fest 
### This weekend on August 24th, 2013 in the UK ( Sholing, Southampton )
### Begining @ 12PM ( There time-zone ).
### http://www.xbmchub.com/forums/announcements/9937-xbmchub-fest-24th-august-poll.html

[COLOR grey][Date: 2013.08.20][/COLOR][COLOR black][Post: 1][/COLOR]
[COLOR red][B]News:[/B][/COLOR]  

[COLOR grey][Date: 2013.08.17][/COLOR][COLOR black][Post: 3][/COLOR]
[COLOR cornflowerblue][B]Private Build:[/B][/COLOR]  v0.2.4

[COLOR grey][Date: 2013.08.17][/COLOR][COLOR black][Post: 2][/COLOR]
[COLOR cornflowerblue][B]Release:[/B][/COLOR]  v0.2.3

[COLOR grey][Date: 2013.08.17][/COLOR][COLOR black][Post: 1][/COLOR]